Values between -128 and 127 are guaranteed to have corresponding cached instances and using valueOf is approximately 3.5 times faster than using constructor. For values outside the constant range the performance of both styles is the same.
git-svn-id: https://svn.apache.org/repos/asf/directory/shared/trunk@945826 13f79535-47bb-0310-9956-ffa450edef68